# robocon_magang_finalproj

./: README.md
sim2025_follow_file/: target_coords.csv
src/sim2025_control/: CMakeLists.txt  package.xml
src/sim2025_control/src/: sim2025_control_joy.cpp  sim2025_control_key.cpp
src/sim2025_follow_ball/: CMakeLists.txt  package.xml
src/sim2025_follow_ball/src/: follow_ball.cpp  sim2025_follow_ball.cpp
src/sim2025_follow_ball/src/unused/: contur  h  hough
src/sim2025_follow_target/: CMakeLists.txt  package.xml
src/sim2025_follow_target/src/: sim2025_follow_target.cpp
src/sim2025_follow_targets/: CMakeLists.txt  package.xml
src/sim2025_follow_targets/src/: sim2025_follow_targets.cpp
src/sim2025_interfaces/: CMakeLists.txt  package.xml
src/sim2025_interfaces/action/: FollowTarget.action  FollowTargets.action
src/simulasi_2025/: frames_2024-11-06_22.17.51.gv
src/simulasi_2025/description/: r2.urdf
src/simulasi_2025/launch/: display.launch.py  mylaunch.launch.py  myurdf.launch.py
src/simulasi_2025/rviz/: my_config.rviz
